# evm-smart-contract-compiler

./: Cargo.toml  README.md  index.js  package.json
rust-compiler/: Cargo.toml  index.d.ts  index.js  package.json
rust-compiler/npm/android-arm-eabi/: README.md  package.json
rust-compiler/npm/android-arm64/: README.md  package.json
rust-compiler/npm/darwin-arm64/: README.md  package.json
rust-compiler/npm/darwin-universal/: README.md  package.json
rust-compiler/npm/darwin-x64/: README.md  package.json
rust-compiler/npm/freebsd-x64/: README.md  package.json
rust-compiler/npm/linux-arm-gnueabihf/: README.md  package.json
rust-compiler/npm/linux-arm64-gnu/: README.md  package.json
rust-compiler/npm/linux-arm64-musl/: README.md  package.json
rust-compiler/npm/linux-riscv64-gnu/: README.md  package.json
rust-compiler/npm/linux-x64-gnu/: README.md  package.json
rust-compiler/npm/linux-x64-musl/: README.md  package.json
rust-compiler/npm/win32-arm64-msvc/: README.md  package.json
rust-compiler/npm/win32-ia32-msvc/: README.md  package.json
rust-compiler/npm/win32-x64-msvc/: README.md  package.json
rust-compiler/src/: lib.rs
src/: main.rs
