[package]
name = "blog-example-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry-compilers = { version = "0.3.13", features = ["svm-solc"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
reqwest = { version = "0.11.26", features = ["json"] }